Corrected spacing issue in form

--- a/wwwroot/css/stylesheet.css
+++ b/wwwroot/css/stylesheet.css
@@ -911,7 +911,7 @@ form hr {
 
 .student-grade-listing th:first-of-type,
 .alumno-select  {
-	width: 350px;
+	width: 325px;
 }
 
 .student-grade-listing th:nth-of-type(2),
